gave some style to the game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background: url(../images/shagy.png);
-    background-size: 90em;
-    background-position-x: 100px;
+    background-size: 170em;
+    background-position-x: 10em;
     color: #eee;
     text-shadow: 2px 4px 10px rgba(0,0,0,0.3);
 
