--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     background-position-x: 10em;
     color: #eee;
     text-shadow: 2px 4px 10px rgba(0,0,0,0.3);
-
+    
 
     
     
@@ -22,6 +22,7 @@ body {
     padding: 1em;    
     letter-spacing: 0.1em;
     line-height: 4em;
+    font-size: 1.7em;
 }
 
 .guessed {
