final commit for my homework, adjusted the counter and calling back functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
     background: url(../images/shagy.png);
-    background-size: 170em;
+    background-size: 125em;
     background-position-x: 10em;
     color: #eee;
     text-shadow: 2px 4px 10px rgba(0,0,0,0.3);
-    
+    max-width: 1920px;
+    height: auto;
 
     
     
